# chinacrawl

./: .gitignore  AGENTS.md  CONTRIBUTING.md  HANDOFF_DOUYIN_MSTOKEN.md  HANDOFF_DOUYIN_XBOGUS.md  LICENSE  README.md  SECURITY.md  __init__.py  bootstrap.ps1  chinacrawl.py  ep01_script.md  package.json  proxy.ps1  push.py  push_doc.py  pyproject.toml  setup-proxy.ps1  sitemap.xml  start-monitor.ps1  temp_send.py  temp_test.txt  test_reply.txt  xhls_scraper.py  上游代理与项目全记录.md  上游代理部署文档.md
.codex/agents/: README.md  executor.md  integrator.md  planner.md  reviewer.md
.codex/memory/: README.md  decisions.md  evolution-log.md  learning-rules.md  patterns.md
.codex/memory/corrections/: INDEX.md  TEMPLATE.md
.codex/memory/observations/: INDEX.md  TEMPLATE.md
.codex/rules/: README.md  base.rules.md  context-budget.md  context-window.rules.md  naming.rules.md  pipeline.rules.md  quality.rules.md  security.rules.md
.codex/skills/memory/: SKILL.md
.codex/skills/script-review/: SKILL.md
.codex/skills/xhls-scraper/: SKILL.md
.codex/xhls/: XHLS-RECOVERY.md  __init__.py  context_engine.py  context_guardian.py  deploy_to_baidu.py  install_ollama.ps1  network-guardian.ps1  start-guardian.bat  start_xhls_mcp.bat  start_xhls_mcp_sse.bat  trend_compare_v2.py  xhls_backup.bat  xhls_engine.py  xhls_scraper.py
.codex/xhls/.firecrawl/: raw-phi3-mini.txt  raw-qwen2.5-7b.txt
.codex/xhls/archives/: session-2026-06-06-01.md  session-2026-06-06-code-review.md
.codex/xhls/brain/: engineer_brain.py
.codex/xhls/xhls_mcp/: cli.py  server.py
.firecrawl/: feishu-doc-content.txt  feishu-doc.html  feishu-skill-doc.md  hermes-context-compression.md  hermes-docs.md  hermes-llms.txt  hermes-mcp-guide.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
chinacrawl/: __init__.py  adaptive.py  captcha.py  extract.py  fastdl.py  parser.py  proxy_pool.py  scraper.py  spider.py  stealth.py
chinacrawl/douyin/: api.py  browser.py  export.py  monitor.py  mstoken.py  scraper.py  session.py
chinacrawl/downloader/: __init__.py  image.py  video.py
chinacrawl/engines/: __init__.py  base.py  douyin_adapter.py  jd.py  pinduoduo_adapter.py  taobao.py  xhs.py
chinacrawl/engines/core/: __init__.py  anti_detect.py  browser.py  session.py
chinacrawl/engines/pinduoduo/: QUICKSTART.md  README.md  __init__.py  anti_detect.py  brand_report.py  browser.py  scraper.py  session.py
chinacrawl/market/: __init__.py  report.py  scanner.py
docs/: CHINACRAWL_50万推进方案.md  DOUYIN_ADAPTER_技术架构.md  LoRA训练集成方案.md  check-vps.ps1  deploy-landing.sh  index.html  session-2026-06-06-evening.md  session-2026-06-06-seo.md  v2ex-post.html  v2ex-post.md  vps-recovery.md  zhihu-answer.md
docs/wps/: README.docx  adr-2026-06-06-xhls-scraper-commercialization.docx  comfyui-capability-ceiling.docx  competitive-analysis-2026-06-06.docx  deep-2026-06-06-three-step-path.docx  moat-analysis-2026-06-06.docx  valuation-projection-2026-06-06.docx
docs/zhihu/: zhihu-1-discovery.md  zhihu-2-data.md  zhihu-3-tool.md
douyin/: __init__.py  api.py  mstoken.py  scraper.py  session.py
examples/: basic_usage.py
examples/cases/: README.md  抖音碎菜机竞品分析报告-增强版.md  维燕牌碎菜机抖音推广方案.md
knowledge/code-patterns/: README.md
knowledge/code-patterns/js/: README.md
knowledge/code-patterns/python/: README.md
knowledge/code-patterns/shell/: README.md
knowledge/competitor-analysis/: README.md
knowledge/competitor-analysis/accounts/: README.md
knowledge/competitor-analysis/trends/: README.md
knowledge/content-formulas/: README.md
knowledge/content-formulas/hooks/: README.md
knowledge/content-formulas/structures/: README.md
knowledge/pipeline-decisions/: README.md  adr-2026-06-06-xhls-scraper-commercialization.md  comfyui-capability-ceiling.md  competitive-analysis-2026-06-06.md  deep-2026-06-06-three-step-path.md  moat-analysis-2026-06-06.md  pdd-adapter-handoff.md  searxng-chinese-setup.md  valuation-projection-2026-06-06.md  xhls-scraper-commercial-use-cases-2026-06-06.md
knowledge/pipeline-decisions/tool-choices/: README.md
knowledge/pipeline-decisions/trade-offs/: README.md
knowledge/security/: README.md
pinduoduo/: anti_detect.py  config.py  scraper.py  session.py
projects/碎菜机分析/: douyin_users_search.json  抖音碎菜机Top10账号竞品分析.md  抖音碎菜机市场分析报告.html
scripts/: check_status.py  check_urls.py  counter_v2.py  debug_search_page.py  deploy_landing.py  deploy_landing2.py  doc_server.py  douyin_downloader.js  extract_mstoken.py  extract_mstoken_v2.py  final_submit.py  fix2_searxng.py  fix4_searxng.py  fix_api.py  fix_api_cookies.py  fix_chunked.py  fix_chunked_v2.py  fix_chunked_v3.py  fix_ip.py  fix_search_xhr.py  fix_searxng.py  github_monitor.py  live_monitor.py  md-open.bat  md-open.ps1  md-server.js  md_to_docx.py  monitor_mentions.py  package-lock.json  package.json  push_feishu_docs.py  reverse_mstoken.py  reverse_mstoken_phase6.py  reverse_mstoken_phase7.py  reverse_mstoken_phase8.py  submit_to_se.py  test_mstoken_api.py  test_mstoken_v2.py  test_regex.py  test_search.py  (+4 more)
src/chinacrawl/: __init__.py  scraper.py
(+28 files in other folders)
