[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chinacrawl"
version = "0.2.0"
description = "ChinaCrawl - The Firecrawl alternative that works in China. 12-in-1 web data engine: scrape, search, crawl, monitor, download, extract, douyin. Zero external API cost."
authors = [{ name = "Xiao Hei (XHLS)", email = "difcn2026@users.noreply.github.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["web-scraping", "crawler", "search", "monitor", "markdown", "firecrawl", "china", "douyin", "tiktok", "x-bogus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
    "trafilatura>=1.6",
]

[project.optional-dependencies]
full = ["playwright>=1.40"]
dev = ["pytest>=7", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/difcn2026/chinacrawl"
Repository = "https://github.com/difcn2026/chinacrawl"
Issues = "https://github.com/difcn2026/chinacrawl/issues"

[tool.setuptools.packages.find]
include = ["chinacrawl", "chinacrawl.*"]

[tool.setuptools.package-data]
"*" = ["LICENSE", "README.md"]
